// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toMatchSvgSnapshot matcher > accepts name option > basic 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="38.4" height="20" viewBox="0 0 38.4 20" preserveAspectRatio="xMidYMid meet">
<rect width="100%" height="100%" fill="#1e1e1e"/>
<text x="0" y="16" font-family="&apos;Menlo&apos;, &apos;Monaco&apos;, &apos;Courier New&apos;, monospace" font-size="16" fill="#d4d4d4">
<tspan x="0 9.6 19.2 28.8">Test</tspan>
</text>
<rect x="0" y="0" width="9.6" height="20" fill="#aeafad" opacity="0.5"/>
</svg>"
`;

exports[`toMatchSvgSnapshot matcher > accepts theme option 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="38.4" height="20" viewBox="0 0 38.4 20" preserveAspectRatio="xMidYMid meet">
<rect width="100%" height="100%" fill="#000000"/>
<text x="0" y="16" font-family="&apos;Menlo&apos;, &apos;Monaco&apos;, &apos;Courier New&apos;, monospace" font-size="16" fill="#ffffff">
<tspan x="0 9.6 19.2 28.8">Test</tspan>
</text>
<rect x="0" y="0" width="9.6" height="20" fill="#aeafad" opacity="0.5"/>
</svg>"
`;

exports[`toMatchSvgSnapshot matcher > produces SVG output from TerminalReadable 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="48" height="40" viewBox="0 0 48 40" preserveAspectRatio="xMidYMid meet">
<rect width="100%" height="100%" fill="#1e1e1e"/>
<text x="0" y="16" font-family="&apos;Menlo&apos;, &apos;Monaco&apos;, &apos;Courier New&apos;, monospace" font-size="16" fill="#d4d4d4">
<tspan x="0 9.6 19.2 28.8 38.4">Hello</tspan>
</text>
<text x="0" y="36" font-family="&apos;Menlo&apos;, &apos;Monaco&apos;, &apos;Courier New&apos;, monospace" font-size="16" fill="#d4d4d4">
<tspan x="0 9.6 19.2 28.8 38.4">World</tspan>
</text>
<rect x="0" y="0" width="9.6" height="20" fill="#aeafad" opacity="0.5"/>
</svg>"
`;
